# vulkan-voxel-project

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
docs/: architecture-review.md  descriptor-pool-strategy.md  ecs-scaling.md  gpu-resource-ownership.md  vk-multiview-stereo.md  vr-anti-aliasing.md  vulkan-render-passes-and-subpasses.md  xr-rig-ecs.md
glass/: CMakeLists.txt
glass/include/glass/: camera.hpp  component_pool.hpp  components.hpp  entity.hpp  event_dispatcher.hpp  geometry.hpp  material.hpp  mesh.hpp  renderable.hpp  renderer.hpp  scene_node.hpp  shader.hpp  vertex.hpp  view.hpp  world.hpp
glass/src/: camera.cpp  event_dispatcher.cpp  geometry.cpp  material.cpp  renderable.cpp  renderer.cpp  shader.cpp  vertex.cpp  world.cpp
steel/: CMakeLists.txt
steel/cmake/: spirv_to_header.cmake
steel/include/steel/: buffer.hpp  engine.hpp  fxaa_pass.hpp  imgui_pass.hpp  pipeline.hpp  swapchain.hpp  uniform_buffer.hpp  xr_system.hpp
steel/shaders/: fullscreen.vert  fxaa.frag
steel/src/: buffer.cpp  engine.cpp  fxaa_pass.cpp  imgui_pass.cpp  pipeline.cpp  swapchain.cpp  xr_system.cpp
test/: CMakeLists.txt  test_buffer.cpp  test_chunk.cpp  test_chunk_manager.cpp  test_chunk_mesh.cpp  test_glass.cpp  test_pipeline.cpp  test_terrain_generator.cpp  test_vertex.cpp  test_voxel_types.cpp  test_xr.cpp
voxel/: CMakeLists.txt
voxel/include/voxel/: application.hpp  camera_controller.hpp  chunk.hpp  chunk_manager.hpp  chunk_mesh.hpp  terrain.hpp  terrain_generator.hpp  voxel.hpp
voxel/shaders/: triangle.frag  triangle.vert
voxel/src/: application.cpp  camera_controller.cpp  chunk.cpp  chunk_manager.cpp  chunk_mesh.cpp  main.cpp  terrain.cpp  terrain_generator.cpp
